# weather-warning-checker

./: .env.example  .gitignore  Cargo.toml  README.md  SETUP_COMPLETE.md  config.yaml
deploy/: README.md
deploy/launchd/: com.aktnk.weather-checker.plist
deploy/systemd/: weather-checker-watchdog.service  weather-checker-watchdog.timer  weather-checker.service
deploy/windows/: install.ps1  uninstall.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: cleanup.rs  config.rs  database.rs  error.rs  jma_feed.rs  main.rs  notification.rs  scheduler.rs  weather_checker.rs
